[gd_scene load_steps=4 format=3 uid="uid://wwqhmf2tgxbb"]

[ext_resource type="Script" path="res://scenes/ui/player_hud/player_hud.gd" id="1_6axa5"]
[ext_resource type="Texture2D" uid="uid://dqntisiqa85xp" path="res://assets/hud/select.svg" id="1_s64rg"]
[ext_resource type="Texture2D" uid="uid://bm1xalmc26djc" path="res://assets/hud/convergence-target.svg" id="2_chmo1"]

[node name="PlayerHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6axa5")

[node name="CrosshairCenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="OpenCrosshair" type="TextureRect" parent="CrosshairCenterContainer"]
self_modulate = Color(0, 1, 0, 1)
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_s64rg")
expand_mode = 2

[node name="InteractCrosshair" type="TextureRect" parent="CrosshairCenterContainer"]
visible = false
self_modulate = Color(0, 1, 0, 1)
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_chmo1")
expand_mode = 2
